test/classes/delete-free/lifetimes/lifetime-annotation-infer-like-swap.good
lifetime-annotation-infer-like-swap.chpl:13: In function 'main':
lifetime-annotation-infer-like-swap.chpl:20: error: Scoped variable b would outlive the value it is set to
lifetime-annotation-infer-like-swap.chpl:16: note: consider scope of own
